After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 594054 - crash in Panel: address rink push
crash in Panel: address rink push
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: general
2.26.x
Other All
: Normal critical
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-09-03 17:09 UTC by dings33
Modified: 2010-01-14 03:17 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26



Description dings33 2009-09-03 17:09:24 UTC
Version: 2.26.3

What were you doing when the application crashed?
address rink push


Distribution:                   Solaris Express Community Edition snv_121 X86
Gnome Release: 2.26.3 2009-08-03 (Sun Microsystems, Inc.)
BugBuddy Version: 2.26.0

X Vendor: Sun Microsystems, Inc.
X Vendor Release: 10603000
Selinux: No
Accessibility: Disabled
GTK+ Theme: blueprint-Sand
Icon Theme: blueprint
GTK+ Modules: canberra-gtk-module, gnomebreakpad

Memory status: size: 114376704 vsize: 114376704 resident: 24342528 share: 405504 rss: 24342528 rss_rlim: 0
CPU usage: start_time: 1251970272 rtime: 1111 utime: 9152157 stime: 1962995 cutime:0 cstime: 0 timeout: 0 it_real_value: 0 frequency: 0

Backtrace was generated from '/usr/bin/gnome-panel'

870:	gnome-panel
 d13028f5 waitid   (0, 4e9, 804549c, 3)
 d12b2eb5 waitpid  (4e9, 8045558, 0, d0c69341) + 65
 d0c69748 g_spawn_sync (0, 85002a0, 0, 4, 0, 0) + 418
 d0c69b48 g_spawn_command_line_sync (83c9f68, 0, 0, 0, 8045678) + 5c
 cc951e4f __1cNrun_bug_buddy6Fpkclp0_b_ (80e2e98, 366, 0, cc951fde) + f3
 cc9520c2 __1cMcheck_if_gdb6F_v_ (d12d8285, d1380000, 80456f8, d12fd2af, b, 0) + 12e
 cc951a94 __1cUbugbuddy_segv_handle6Fi_v_ (b, 0, 80457ac) + 64
 d12fd2af __sighndlr (b, 0, 80457ac, cc951a30) + f
 d12f032f call_user_handler (b) + 2af
 d12f055f sigacthandler (b, 0, 80457ac) + df
 --- called from signal handler with signal 11 (SIGSEGV) ---
 d12747db strlen   (80c78bc, 8046938, 80467b0, 0) + b
 d12c323d vsnprintf (80467f0, 80, 80c78bc, 8046938) + 65
 d12be1ae vasprintf (80468ec, 80c78bc, 8046938, d0c686a6) + 36
 d0c686c3 g_vasprintf (80468ec, 80c78bc, 8046938, d0c516a8) + 2b
 d0c516c6 g_strdup_vprintf (80c78bc) + 2a
 d0f2a7ab gtk_message_dialog_format_secondary_text (8619088, 80c78bc, 81e38b96, 80b8a4f) + 5b
 080b8a6c panel_error_dialog (8152018, 80fd108, 80c1d48, 1, cc705c10) + 98
 08093dee panel_launcher_create_from_info (8152018, 0, 0, 8618800, 83408f0) + 19a
 080828db drop_url (815d800, 0, 855bca8, 8082e1a) + 93
 080833f4 panel_receive_dnd_data (815d800, 1, 0, 8047200, 817a938, 1a514fe) + 5e8
 08083a0e drag_data_recieved_cb (8152018, 817a938, 0, 1, 8047200, 1) + 96
 d0f186d9 _gtk_marshal_VOID__OBJECT_INT_INT_BOXED_UINT_UINT (8128578, 0, 7, 8618000, 8046c18, 0) + 71
 d0baf3be g_closure_invoke (8128578, 0, 7, 8618000, 8046c18, 1) + d6
 d0bc58c8 signal_emit_unlocked_R (811fe50, 0, 8152018, 0, 8618000, 8152018) + d94
 d0bc4724 g_signal_emit_valist (8152018, 46, 0, 8046e28) + 9c8
 d0bc4a7e g_signal_emit_by_name (8152018, d1152c34, 817a938, 0, 1, 8047200) + 14e
 d1042fd8 gtk_drag_selection_received (84755d0, 8047200, 1a514fe, 8152018) + 158
 d0f179f9 _gtk_marshal_VOID__BOXED_UINT (8614f50, 0, 3, 831ea60, 8046fe8, 0) + 65
 d0baf3be g_closure_invoke (8614f50, 0, 3, 831ea60, 8046fe8, 1) + d6
 d0bc58c8 signal_emit_unlocked_R (80f0ba8, 0, 84755d0, 0, 831ea60, 84755d0) + d94
 d0bc4724 g_signal_emit_valist (84755d0, 3a, 0, 80471f8) + 9c8
 d0bc4a7e g_signal_emit_by_name (84755d0, d1135e6c, 8047200, 1a514fe) + 14e
 d0f7854d gtk_selection_retrieval_report (852d2c0, 8f, 8, 855bca8, 1b5, 1a514fe) + 61
 d0f7819b _gtk_selection_notify (84755d0, 82bd190) + e3
 d0f15bd2 _gtk_marshal_BOOLEAN__BOXED (811a9e8, 8047420, 2, 83ebf68, 8047448, d0f780b8) + 76
 d0baf6ae g_type_class_meta_marshal (811a9e8, 8047420, 2, 83ebf68, 8047448, fc) + 46
 d0baf3be g_closure_invoke (811a9e8, 8047420, 2, 83ebf68, 8047448, 86482f0) + d6
 d0bc61ed signal_emit_unlocked_R (811e7e0, 0, 84755d0, 8047590, 83ebf68, 14) + 16b9
 d0bc451e g_signal_emit_valist (84755d0, 39, 0, 804763c) + 7c2
 d0bc4925 g_signal_emit (84755d0, 39, 0, 82bd190, 804765c, 8223428) + 25
 d102b2e6 gtk_widget_event_internal (84755d0, 82bd190, 8047688, d102ae94) + 246
 d102af29 gtk_widget_event (84755d0, 82bd190, 1, d0f13192) + ad
 d0f1351c gtk_main_do_event (82bd190, 0, 8047708, d0d45f7a) + 398
 d0d45fca gdk_event_dispatch (8103138, 0, 0, d0c32b94) + 5a
 d0c32d5a g_main_context_dispatch (8103180, 0, 8322cc8, 17) + 262
 d0c3340b g_main_context_iterate (8103180, 1, 1, 80dc700) + 483
 d0c33a35 g_main_loop_run (8247bd0, 8247bd0, 8047848, d0f12d8a) + 1dd
 d0f12e33 gtk_main (804786c, d13fc804, 80478a4, 807418d, 1, 80478b0) + b7
 0807861e main     (1, 80478b0, 80478b8, 804786c) + 15a
 0807418d _start   (1, 80479c4, 0, 80479d0, 8047a01, 8047a35) + 7d


----------- .xsession-errors (25943 sec old) ---------------------
(firefox-bin:960): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref ce0082c0(b5cae640)
(firefox-bin:960): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref ce0082c0(b5cae720)
(firefox-bin:960): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref ce0082c0(b5cae480)
(firefox-bin:960): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref ce0082c0(b22fc830)
(firefox-bin:960): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref ce0082c0(b049dd40)
(firefox-bin:960): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref ce0082c0(b069a330)
(firefox-bin:960): GLib-GObject-WARNING **: g_object_weak_unref: couldn't find weak ref ce0082c0(b049de20)
...Too much output, ignoring rest...
--------------------------------------------------
Comment 1 Vincent Untz 2010-01-14 03:17:19 UTC
It should be fixed in git now.