[panel] Initialize GError to NULL in panel_launcher_create_from_info()

Should fix https://bugzilla.gnome.org/show_bug.cgi?id=594054